crates/dollet-core/src/output/snapshots/dollet_core__output__m3u__tests__direct_urls_bypass_the_proxy_and_restore_vlc_multicast.snap
---
source: crates/dollet-core/src/output/m3u.rs
expression: "render(&options(), &entries)"
---
#EXTM3U x-tvg-url="http://ipx.test/output/epg" url-tvg="http://ipx.test/output/epg"
#EXTINF:-1 tvg-id="101" tvg-name="Channel A" tvg-logo="http://ipx.test/api/channels/logos/1/cache/" tvg-chno="101" tvc-guide-stationid="12345" group-title="News",Channel A
http://p.example/a.ts
#EXTINF:-1 tvg-id="102.5" tvg-name="Channel B" tvg-logo="" tvg-chno="102.5" group-title="Default",Channel B
udp://@239.0.0.1:1234
#EXTINF:-1 tvg-id="3" tvg-name="Channel & &quot;C&quot;" tvg-logo="http://ipx.test/api/channels/logos/3/cache/" tvg-chno="" group-title="News",Channel & "C"
http://ipx.test/proxy/ts/stream/00000000-0000-0000-0000-000000000003
